add front side js logic

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,8 @@
    <!-- Bootstrap -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css"/>
    <!-- Custom CSS -->
-   <link rel="stylesheet" type ="text/css" href="/assets/css/style.css"/>
+   <link rel="stylesheet" type ="text/css" href="/assets/css/burger_style.css"/>
+   <script src="/assets/javascript/eatBurger.js" ></script>
 </head>
 
 <body>
