--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,21 +1,37 @@
 <div class="container">
-    <div class="row">
+    <div class="row  justify-content-center">
         <img src="/assets/img/burger.png" alt="burger phot">
     </div>
-    <div class="row text-center">
+    <div class="row  justify-content-center">
         <H2>Eat-Da-Burger</H2>
     </div>  
     <div class="row">
-        <div class="col-5 offset-1"></div>
-        <div class="col-5"></div>
+        <div class="col-8 ">
+            <ol id="orderedBurger">
+                {{!-- <div class="ordered">
+                    <div class="col-6">
+                        <li>check</li>
+                    </div>
+                    <div class="col-3">
+                        <button class="btn btn-info">btn</button>
+                    </div>
+                </div> --}}
+               
+            </ol>
+        </div>
+        {{!-- <div class="col-2 btnDiv"></div> --}}
+        <div class="col-4" >
+            <ol id="devouredBurger"></ol>
+        </div>
     </div>
-    <div class="row">
-        <form >
+    <div class="row  justify-content-center">
+        <form class="create-form">
             <div class="form-group">
                 <label for="inputBurger"></label>
                 <textarea class="form-control" id="inputBurger" rows="3" placeholder="Burger Name"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            </div>  
+            <button type="submit" class="btn btn-primary" id="btnBurger">Submit</button>          
         </form>
+        
     </div>
 </div>    
