add reload function after create/update and change update ORM

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -15,3 +15,14 @@ ol li{
 .ordered button {
     float:right;
 }
+
+img{
+    margin:10px;
+}
+h1{
+    color:darkorange;
+}
+
+h2{
+    color:darkmagenta;
+}
