--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,32 +7,23 @@
     </div>  
 
     <div class="row">
-        <div class="col-8 ">
-            <h2>Burgers are available !</h2>
-            <ol id="orderedBurger">
+        <div class="col-md-7 col-sm-12">
+            <h2>Burgers Available !</h2>
+            <ol class="list-group">
                 {{#each burgers}}
                     {{#unless devoured}}
                     {{> burgers/burger-block }}
                     {{/unless}}
-                {{/each}}
-                {{!-- <div class="ordered">
-                    <div class="col-6">
-                        <li>check</li>
-                    </div>
-                    <div class="col-4">
-                        <button class="btn btn-info">btn</button>
-                    </div>
-                </div> --}}
+                {{/each}}             
                
             </ol>
         </div>
     
-        <div class="col-4" >
+        <div class="col-md-4 col-sm-12" >
             <h2>Burgers devoured!</h2>
-            <ol id="devouredBurger">
+            <ol >
                  {{#each burgers}}
                     {{#if devoured}}
-                    {{!-- {{> burgers/burger-block }} --}}
                     <li>{{this.burger_name}}</li>
                     {{/if}}
                 {{/each}}
@@ -50,3 +41,24 @@
         
     </div>
 </div>    
+
+<div class="container">
+    <div class="modal" id="modal-info" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Information</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body modal-body-info">
+                
+            </div>
+            <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>        
