--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,13 +1,14 @@
 
 {{#unless devoured}}
-<div class="ordered">
-	<div class="col-6">
-     	<li>
-			{{burger_name}}
+<div class="row">
+	<div class="col-4"> 		
+     	<li >	
+			{{~burger_name~}}				
 		</li>
-	</div>
-	<div class="col-4">
-		<button class="btn btn-info btnDevour" data-id="{{this.id}}" bName="{{this.burger_name}}">DEVOUR IT!</button>
-	</div>
-</div>
+	</div>	
+    <div class="col-4">		
+		<button class="btn btn-info btnDevour" data-id="{{this.id}}">DEVOUR IT!</button>
+	</div>	
+</div>	
+	
 {{/unless}}
