--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,5 +1,6 @@
 .container{
-    background-color: lightslategray;
+    /* background-color: lightslategray; */
+    background-image: url("../img/background.jpg");
     margin-top:30px;
 }
 
